# oddstracker

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  docker-compose.yml  grafana_dashboard_template.json  grafana_queries.sql  justfile  main.ipynb  main.py  pyproject.toml  resources.md  test.http
.github/workflows/: release.yml
docs/: roadmap.md
grafana/provisioning/dashboards/: oddstracker.yml
grafana/provisioning/datasources/: timescaledb.yml
src/oddstracker/: app.py  app_initializer.py  config.py  utils.py
src/oddstracker/adapters/: postgres_client.py
src/oddstracker/domain/: kambi_event.py  kambi_provider.py  providers.py  teamdata.py
src/oddstracker/domain/model/: collection_response.py  converter.py  healthstatus.py  sportevent.py  sportsbetting.py  sportsbetting2.py
src/oddstracker/service/: __init__.py  oddschanges.py  oddscollector.py  oddsretriever.py  teamprofiler.py
test/: conftest.py  test_db.py  test_model.py  test_oddscollector.py
test/data/: raw_kambi_nfl_2025-10-22.json  raw_kambi_nfl_2025-10-25.json  raw_theoddsapi_nfl_2025-10-22.json  raw_theoddsapi_nfl_2025-10-25.json  worked_kambi_2025-10-26.json  worked_theoddsapi_2025-10-26.json
test/oddstracker/: conftest.py  test_db.py  test_model.py  test_oddschanges.py  test_oddscollector.py  test_teamprofiler.py
